--- a/technofinances/src/Componentes/NavBar.css
+++ b/technofinances/src/Componentes/NavBar.css
@@ -1,5 +1,6 @@
 .navbar {
-    background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+    background-color:rgba(0,0,0,0.5);
+    /*background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);*/
     height: 80px;
     display: flex;
     justify-content: center;
