--- a/technofinances/src/Pages/BGeneral.css
+++ b/technofinances/src/Pages/BGeneral.css
@@ -2,7 +2,7 @@
     max-width: 100%;
     
     padding: 20px;
-    background-color: #ffffff;
+    background-color: rgba(255,255,255,0);
     border-radius: 15px;
   }
   
@@ -63,6 +63,7 @@
   .financial-report-container {
     display: flex;
     flex-direction: column;
+    rgba: (256,256,256,0);
   }
   
   .charts-container {
