--- a/technofinances/src/Pages/EResultados.css
+++ b/technofinances/src/Pages/EResultados.css
@@ -37,6 +37,11 @@
       
   }
 
+  #resultadoFinanciero {
+      color:#ffffff;
+      background-color: rgba(0, 0, 0, 0.2); 
+      text-align: center;
+  }
 
 .detalle-ingresos {
     color: green; 
