--- a/technofinances/src/Pages/Inicio.css
+++ b/technofinances/src/Pages/Inicio.css
@@ -3,11 +3,12 @@
     padding: 17px;
   
     padding-right: 59px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255,0);
   }
   
   .hero-section {
-    background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+    /*background: linear-gradient(to right, #FECC8A 0%, #E2B0AE 100%);*/
+    background-color: rgba(0,0,0,0.8);
     color: white;
     padding: 60px 20px;
     margin-bottom: 40px;
@@ -28,6 +29,8 @@
   .feature {
     max-width: 200px;
     margin: 10px;
+    background-color:#ffffff;
+    border-radius: 15px;
   }
   
   .feature span {
@@ -35,8 +38,8 @@
   }
   
   button {
-    background-color: #ff4081;
-    color: white;
+    background-color: white;
+    color: black;
     padding: 12px 24px;
     border: none;
     border-radius: 5px;
@@ -46,7 +49,7 @@
   }
   
   button:hover {
-    background-color: #f50057;
+    background-color: #blue;
   }
   
   @media (max-width: 768px) {
