--- a/technofinances/src/Pages/LogIn.css
+++ b/technofinances/src/Pages/LogIn.css
@@ -49,9 +49,9 @@
   
   button {
     border-radius: 20px;
-    border: 1px solid #6a11cb;
-    background-color: #6a11cb;
-    color: #ffffff;
+    border: 1px solid black;
+    background-color: white;
+    color: black;
     font-size: 12px;
     font-weight: bold;
     padding: 12px 45px;
@@ -71,6 +71,7 @@
   button.ghost {
     background-color: transparent;
     border-color: #ffffff;
+    color:white;
   }
   
   form {
@@ -164,12 +165,12 @@
   }
   
   .overlay {
-    background: #ff416c;
-    background: -webkit-linear-gradient(to right, #6a11cb, #2575fc);
-    background: linear-gradient(to right, #6a11cb, #2575fc);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 0 0;
+    /*background: #ff416c;*/
+    /*background: -webkit-linear-gradient(to right, #6a11cb, #2575fc);*/
+    /*background: linear-gradient(to right, #6a11cb, #2575fc);*/
+    /*background-repeat: no-repeat;*/
+    /*background-size: cover;*/
+    /*background-position: 0 0;*/
     color: #ffffff;
     position: relative;
     left: -100%;
@@ -184,6 +185,7 @@
   }
   
   .overlay-panel {
+    background-color:rgba(0,0,0,1);
     position: absolute;
     display: flex;
     align-items: center;
