--- a/technofinances/src/Pages/LogIn.css
+++ b/technofinances/src/Pages/LogIn.css
@@ -69,9 +69,14 @@
   }
   
   button.ghost {
-    background-color: transparent;
-    border-color: #ffffff;
+    background-color: black;
+    border-color: white;
     color:white;
+  }
+   button.ghost:hover {
+    background-color: white;
+    color:black;
+    border-color: white;
   }
   
   form {
