--- a/technofinances/src/Pages/Dash.css
+++ b/technofinances/src/Pages/Dash.css
@@ -31,6 +31,7 @@
     align-items: center;
     opacity:0.95;
     font-size: 20px;
+    width: 300px;
   }
   .dashboard-card:hover {
     box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.5);
